--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eric Tsai</title>
+    <title>Rachel Lam</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,7 +19,7 @@
         <nav class="">
             <!-- <h1 class="flex-row w-1/2">Eric Tsai</h1> -->
             <div class="flex items-center justify-between py-2 px-4">
-                <home class="flex-row w-1/2"><a href="index.html">Eric Tsai</a></home>
+                <home class="flex-row w-1/2"><a href="index.html">Rachel Lam</a></home>
                 <button class="md:hidden" onclick="toggleMenu()" id="menu-btn">
                     <svg class="w-6 h-6" viewBox="0 0 24 24">
                         <path d="M4 6H20M4 12H20M4 18H20"/>
@@ -43,10 +43,10 @@
             <div class="hidden md:flex flex-row pl-12 pr-12 pt-24">
                 <div class="w-1/5"></div>
                 <div class="flex w-1/5 items-center justify-center">
-                    <img src="img/erictsai.jpg" alt="Eric Tsai" class="rounded-full">
+                    <img src="img/rachel.png" alt="Eric Tsai" class="rounded-full">
                 </div>
                 <div class="w-2/5 flex items-center justify-center m-auto">
-                    <h1 class="flex text-2xl pt-8">Eric Tsai 蔡侑霖</h1>
+                    <h1 class="flex text-2xl pt-8">Rachel Lam 林慶琳</h1>
                 </div>
                 <div class="flex w-1/5"></div>
             </div>
@@ -54,7 +54,7 @@
                 <div class="w-1/5"></div>
                 <div class="w-3/5">
                     <div class="pt-12 flex flex-col items-center justify-center">
-                        <img src="img/erictsai.jpg" alt="Eric Tsai" class="flex rounded-full w-3/5">
+                        <img src="img/rachel.png" alt="Eric Tsai" class="flex rounded-full w-3/5">
                         <h1 class="flex text-xl pt-4 items-center justify-center">Eric Tsai 蔡侑霖</h1>
                     </div>
                 </div>
@@ -64,13 +64,13 @@
                 <div class="md:w-1/5"></div>
                 <div class="md:w-3/5 m-auto pb-12">
                     <h2 class="text-xl font-bold">|關於 About|</h2>
-                    <p class="text-sm pt-4">出生於1997年，曾任AI新創公司AI工程師，近期回學校擔任研究助理。因過去參與攝影社團活動接觸創作，以往主要以底片攝影、藝術書作為創作手段。近期結合自身專業，開始嘗試數位藝術創作，主要聚焦於大數據、人工智慧與人類互動之下產生的火花。</p>
-                    <p class="text-sm pt-2">Born in 1997, currently working as an AI engineer at an AI startup. Previously involved in photography club activities, mainly focused on film photography and art books as creative mediums. Recently, combining my expertise with digital art, with a particular focus on the sparks generated between big data, artificial intelligence and human interaction.</p>
+                    <p class="text-sm pt-4">加入台大暗房工作坊接觸底片攝影，參與攝影社團活動，主要以黑白攝影、旅遊風景照為主。</p>
+                    <p class="text-sm pt-2">Joined the National Taiwan University Darkroom Workshop to learn about film photography, and participated in photography club activities, mainly focusing on black and white photography and travel landscape photos.</p>
                     <h2 class="text-xl font-bold pt-8">|經歷 Experiences|</h2>
-                    <p class="text-sm pt-4">2023 入選 台北數位藝術中心 7000x7000跨域媒合共創計畫：《AI之眼》</p>
-                    <p class="text-sm pt-4">2023 入選 台北數位藝術中心 7000x7000跨域媒合共創計畫：《Crowd_Cloud_Crowded》</p>
+                    <p class="text-sm pt-4">2023 開始數位相機攝影</p>
+                    <p class="text-sm pt-4">2024 開始學習底片攝影</p>
                     <h2 class="text-xl font-bold pt-8">|展覽 Exhibitions|</h2>
-                    <p clas="text-sm pt-4">台北數位藝術中心 7000x7000計畫7000x7000跨域媒合共創計畫發表《梯度盲區 GRADIENT SCOTOMA》、《Crowd_Cloud_Crowded》</p>
+                    <p clas="text-sm pt-4"></p>
                 </div>
                 <div class="md:w-1/5"></div>
             </div>
