--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eric Tsai</title>
+    <title>Rachel Lam</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;900&family=Share+Tech+Mono&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <script src="script/common.js"></script>
     <script src="script/index.js"></script>
@@ -16,9 +16,9 @@
 <body class="flex flex-col min-h-screen">
     <header class="fixed inset-x-0 top-0">
         <nav class="">
-            <!-- <h1 class="flex-row w-1/2">Eric Tsai</h1> -->
+            <!-- <h1 class="flex-row w-1/2">Rachel Lam</h1> -->
             <div class="flex items-center justify-between py-2 px-4">
-                <home class="flex-row w-1/2"><a href="index.html">Eric Tsai</a></home>
+                <home class="flex-row w-1/2"><a href="index.html">Rachel Lam</a></home>
                 <button class="md:hidden" onclick="toggleMenu()" id="menu-btn">
                     <svg class="w-6 h-6" viewBox="0 0 24 24">
                         <path d="M4 6H20M4 12H20M4 18H20"/>
@@ -39,7 +39,7 @@
     </header>
     <banner class="py-44">
         <div class="flex flex-col items-center justify-center">
-            <h1 class="text-6xl font-bold">Eric Tsai</h1>
+            <h1 class="text-6xl font-bold">Rachel Lam</h1>
         </div>
     </banner>
     <main class="flex flex-col px-4 py-8 items-stretch flex-grow">
